<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/background_round_corners"
              android:id="@+id/dialogWarning"
              android:padding="10dp"
              tools:ignore="MissingPrefix">

    <ImageView
            android:src="@drawable/ic_access_alarm"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription" />

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorSmooth" />

    <TextView
            android:text="@string/dialog_permissions_title"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"/>

    <TextView
            android:text="@string/dialog_permissions_message"
            android:textColor="@color/colorSubTitle"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    <LinearLayout
            android:id="@+id/bottomButtons"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/buttonAccept"
                android:text="@string/dialog_accept"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:gravity="center"
                android:padding="10dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground" />
        <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorSmooth" />

        <TextView
                android:id="@+id/buttonDecline"
                android:text="@string/dialog_decline"
                android:textColor="@color/colorSubTitle"
                android:textSize="12sp"
                android:gravity="center"
                android:padding="10dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                fontPath="fonts/Poppins-Medium.ttf" />

    </LinearLayout>

</LinearLayout>
