<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="logInViewModel"
                  type="com.peruapps.christopher_elias.ui.fragments.login.LogInViewModel"/>
    </data>
    <RelativeLayout
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:id="@+id/tv_app_name"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>
        <TextView
                android:id="@+id/tv_app_description"
                android:layout_below="@id/tv_app_name"
                android:text="@string/app_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <LinearLayout
                android:id="@+id/ll_fields"
                android:orientation="vertical"
                android:layout_marginTop="50dp"
                android:layout_below="@id/tv_app_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:text="@={logInViewModel.email}"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
            <EditText
                    android:text="@={logInViewModel.pwd}"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/ll_buttons"
                android:layout_below="@id/ll_fields"
                android:layout_marginTop="50dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/log_in"
                    android:gravity="center"
                    android:padding="16dp"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_ripple_effect_round_corners"
                    android:onClick="@{() -> logInViewModel.logIn()}"/>
            <TextView
                    android:text="@string/sign_in"
                    android:gravity="center"
                    android:padding="16dp"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_ripple_effect_round_corners"
                    android:onClick="@{() -> logInViewModel.signIn()}"/>
        </LinearLayout>
    </RelativeLayout>
</layout>
